--- a/dashboard.Rmd
+++ b/dashboard.Rmd
@@ -17,7 +17,12 @@ library(flexdashboard)
 
 
 ```{r}
+data("rest_inspec")
 
+nyc_inspect = 
+  rest_inspec %>% 
+  select(boro, cuisine_description, dba, score, violation_description, grade) %>% 
+  filter(grade %in% c("A", "B", "C"))
 ```
 
 Column {data-width=600}
@@ -35,12 +40,31 @@ Column {data-width=400}
 ### Chart B
 
 ```{r}
-
+nyc_inspect %>% 
+  filter(cuisine_description == c("Korean", "Thai", "Chinese", "Vietnamese", "Japanese", "Russian", "Italy", "French", "American", "Mexican")) %>% 
+  mutate(text_label = str_c("Restaurant: ", dba, "\nScore: ", score)) %>%
+  plot_ly(y = ~score, x = ~cuisine_description, 
+          color = ~cuisine_description, colors = "viridis",
+          text = ~text_label,
+          type = "box") %>% 
+  layout(
+    title = "Scores of restaurants in NY grouped by cuisine", 
+    xaxis = list(title = "Cuisine"),
+    yaxis = list(title = "Inspection score"))
 ```
 
 ### Chart C
 
 ```{r}
-
+nyc_inspect %>% 
+  filter(cuisine_description == c("Korean", "Thai", "French", "Pizza", "Italian", "Peruvian", "Geek", "Chinese", "Vietnamese", "Japanese", "Bakery", "Russian", "German", "Indian", "Delicatessen", "Café/Coffee/Tea", "Mexican", "American")) %>% 
+  count(cuisine_description) %>% 
+  mutate(cuisine_description = fct_reorder(cuisine_description, n)) %>% 
+  plot_ly(x = ~cuisine_description, y = ~n, color = ~cuisine_description,
+          type = "bar", colors = "viridis") %>% 
+  layout(
+    title = "Count of restaurants in Manhattan by cuisine", 
+    xaxis = list(title = "Cuisine"),
+    yaxis = list(title = "Count"))
 ```
 
