--- a/plotly.Rmd
+++ b/plotly.Rmd
@@ -23,26 +23,11 @@ data("rest_inspec")
 
 nyc_inspect = 
   rest_inspec %>% 
-  select(boro, cuisine_description, dba, score, violation_description, grade) %>% 
+  select(boro, cuisine_description, dba, score, violation_description, grade, building) %>% 
   filter(grade %in% c("A", "B", "C"))
 ```
 
 # Plotly plots
-
-## Scatterplot
-
-```{r}
-nyc_inspect %>% 
-  filter(cuisine_description == c("Korean", "Thai", "Chinese", "Vietnamese", "Japanese", "Russian", "Italy", "French", "American", "Mexican")) %>% 
-  filter(score %in% 20:50) %>% 
-  mutate(text_label = str_c("Score: ", score)) %>%
-  plot_ly(x = ~cuisine_description, y = ~dba, 
-          type = "scatter", mode = "markers", text = ~text_label,
-          color = ~score, colors = "viridis") %>% 
-  layout(title = "Restaurants with score between 20 and 50",
-         xaxis = list(title = "Cuisine"),
-         yaxis = list(title = "Restaurant"))
-```
 
 ## Boxplot
 
@@ -73,5 +58,31 @@ nyc_inspect %>%
     title = "Count of restaurants in Manhattan by cuisine", 
     xaxis = list(title = "Cuisine"),
     yaxis = list(title = "Count"))
+```
+
+## Scatterplot
+
+```{r}
+nyc_inspect %>% 
+  filter(cuisine_description == c("Korean", "Thai", "Chinese", "Vietnamese", "Japanese", "Russian", "Italy", "French", "American", "Mexican")) %>% 
+  filter(score %in% 20:50) %>% 
+  mutate(text_label = str_c("Score: ", score)) %>%
+  plot_ly(x = ~cuisine_description, y = ~dba, 
+          type = "scatter", mode = "markers", text = ~text_label,
+          color = ~score, colors = "viridis") %>% 
+  layout(title = "Restaurants with score between 20 and 50",
+         xaxis = list(title = "Cuisine"),
+         yaxis = list(title = "Restaurant"))
+```
+
+## Histogram 
+
+```{r}
+nyc_inspect %>% 
+  mutate(text_label = str_c("Restaurant: ", dba, "\nScore: ", score)) %>%
+  plot_ly(x = ~score, type = "histogram", color = "orange", alpha = .8, text = ~text_label) %>% 
+  layout(title = "Histogram of inspection scores of NY restaurants",
+         xaxis = list(title = "Score"),
+         yaxis = list(title = "Count"))
 ```
 
